added logo as file

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <div id="workspopup">
       <div id="reactplusjs">
- <img id="react-logo" src="https://icon2.cleanpng.com/20180615/jkh/kisspng-computer-icons-react-blog-science-and-technology-5b23f0260e1c02.7227251215290818940578.jpg">
+ <img id="react-logo" src="favpng_react-logo.png">
  <img id="plus" src="https://flyclipart.com/thumb2/calculation-operation-plus-sign-png-icon-free-download-163334.png">
  <img id="js-logo" src="https://flyclipart.com/thumb2/javascript-icon-892796.png">    
 </div>
