--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Home</title>
   <link rel="stylesheet" href="index.css">
   
 </head>
@@ -23,10 +23,12 @@
     </nav>
  
     <div id="workspopup">
+      <a href="works1.html">
       <div id="reactplusjs">
  <img id="react-logo" src="favpng_react-javascript-responsive-web-design-github-angularjs.png">
  <img id="js-logo" src="favpng_javascript-responsive-web-design-programmer.png">    
 </div>
+</a>
 <div id="wppluselem">
   <img id="wp" src="favpng_wordpress-logo-website-blog-icon.png">
 
@@ -58,10 +60,6 @@
 
 </form>
 </div>
-
-
-
-
 
 
 
