working on mobile version

--- a/works1.html
+++ b/works1.html
@@ -22,6 +22,8 @@
     </a>
     
   </div>
+  <a id="homereactjs" href="index.html">HOME</a>
+  <a id="towpelem" href="works2.html">OTHER WORK</a>
 
 </div>
 
