--- a/works2.html
+++ b/works2.html
@@ -19,6 +19,8 @@
     </a>
     
   </div>
+  <a id="homewpelem" href="index.html">HOME</a>
+  <a id="toreactjs" href="works1.html">OTHER WORK</a>
 
 </div>
 
