testing adding div around bio title

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 </a>
 <i id="worksclose" class="fa-solid fa-circle-xmark fa-2xl"></i>
 </div>
-<h1 id="bio-title">ABOUT ME</h1>
+<div id="bio-title">
+<h1>ABOUT ME</h1>
+</div>
 <h2 id="bio">Former professional musician looking to break into the web development industry.</h2>
 
 <div id="formcontainer">
