--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <script src="index.js"></script>
   <div id="container">
     
-    <h1 id="title">ramariano - WEB DEVELOPER</h1>
+    <h1 id="title">ramariano | WEB DEVELOPER</h1>
     <nav id="navmenu">
       <ul>
-        <li><a id="aboutme" href="#aboutme">ABOUT ME</a></li>
+        <li><a id="aboutme" href="#aboutme">ABOUT</a></li>
         <li><a id="works" href="#works">WORKS</a></li>
         <li><a id="contact" href="#contact">CONTACT</a></li>
       </ul>
@@ -45,7 +45,7 @@
 <div id="bio-title">
 <h1>ABOUT ME</h1>
 </div>
-<h2 id="bio">Former professional musician looking to break into the web development industry.</h2>
+<h2 id="bio">Former professional musician looking to break into the <span style="color:black">web development</span> industry.  A year-plus of self-taught experience, and a strong commitment to learning more!  Experienced in <span style="color: black">HTML, CSS, JS</span> and built projects with <span style="color: black">React</span> and <span style="color: black">Wordpress/Elementor</span> </h2>
 
 <div id="formcontainer">
 <form method="post" name="Form" action="https://formspree.io/f/moqrwadk">
