removed href links

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <h1 id="title">ramariano | WEB DEVELOPER</h1>
     <nav id="navmenu">
       <ul>
-        <li><a id="aboutme" href="#aboutme">ABOUT</a></li>
-        <li><a id="works" href="#works">WORKS</a></li>
-        <li><a id="contact" href="#contact">CONTACT</a></li>
+        <li><a id="aboutme">ABOUT</a></li>
+        <li><a id="works">WORKS</a></li>
+        <li><a id="contact">CONTACT</a></li>
       </ul>
       
     </nav>
