added mobile dimensions to aboutme

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <script src="index.js"></script>
   <div id="container">
-    <img id="headshot" src="headshot circle.png">
+    <img id="headshot" src="Headshot Circle.png">
     
     <h1 id="title">ramariano | WEB DEVELOPER</h1>
     <nav id="navmenu">
