added labels to works

--- a/index.html
+++ b/index.html
@@ -37,15 +37,17 @@
 
  
     <div id="workspopup">
-      <h3 id="workstitle">CHOOSE THE TECH</h3>
+      <h2 id="workstitle">CHOOSE THE TECH</h2>
       <div id="workslinks">
       <a href="works1.html">
+        <h4 id="reactjslabel">React+JS</h4>
       <div id="reactplusjs">
  <img id="react-logo" src="favpng_react-javascript-responsive-web-design-github-angularjs.png">
  <img id="js-logo" src="favpng_javascript-responsive-web-design-programmer.png">    
 </div>
 </a>
 <a href="works2.html">
+  <h4 id="wpelemlabel">WP+Elementor</h4>
 <div id="wppluselem">
   <img id="wp" src="favpng_wordpress-logo-website-blog-icon.png">
 
