adding 4th project and working on carousel

--- a/works1.html
+++ b/works1.html
@@ -6,11 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Works One</title>
   <link rel="stylesheet" href="works1.css">
+  <script src="https://kit.fontawesome.com/70e04bd00e.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="container">
   <h1>REACT + JS</h1>
-  <div id=imagelinks>
+  <div id="imagelinks" data-carouselstate="centered">
     <a href="https://ra-mariano.github.io/FCC--React-Calculator/">
       <img id="reactcalculatorimg" src="React Calculator Image.png">
     </a>
@@ -20,10 +21,16 @@
     <a href="https://ra-mariano.github.io/React-Pomodoro-Clock/">
       <img id="reactpomodoroclockimg" src="Pomodoro Clock.png">
     </a>
+    <a href="https://ra-mariano.github.io/FCC--D3-Bar-Chart/">
+      <img id="barchartimg" src="D3 GDP Bar Chart Image .png">
+    </a>
     
   </div>
   <a id="homereactjs" href="index.html">HOME</a>
   <a id="towpelem" href="works2.html">OTHER WORK</a>
+
+  <i id="leftarrow" class="fa-solid fa-circle-chevron-left fa-4x"></i>
+  <i id="rightarrow" class="fa-solid fa-circle-chevron-right fa-4x"></i>
 
 </div>
 
