spacing adjustments, added icons to works pages

--- a/works1.html
+++ b/works1.html
@@ -26,8 +26,8 @@
     </a>
     
   </div>
-  <a id="homereactjs" href="index.html">HOME</a>
-  <a id="towpelem" href="works2.html">OTHER WORK</a>
+  <a id="homereactjs" href="index.html"><i class="fa-solid fa-house-chimney"></i> HOME</a>
+  <a id="towpelem" href="works2.html"><i class="fa-solid fa-briefcase"></i> OTHER WORK</a>
 
   <i id="leftarrow" class="fa-solid fa-circle-chevron-left fa-4x"></i>
   <i id="rightarrow" class="fa-solid fa-circle-chevron-right fa-4x"></i>
