--- a/works2.html
+++ b/works2.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Works Two</title>
   <link rel="stylesheet" href="works2.css">
+  <script src="https://kit.fontawesome.com/70e04bd00e.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="container">
@@ -19,8 +20,8 @@
     </a>
     
   </div>
-  <a id="homewpelem" href="index.html">HOME</a>
-  <a id="toreactjs" href="works1.html">OTHER WORK</a>
+  <a id="homewpelem" href="index.html"><i class="fa-solid fa-house-chimney"></i> HOME</a>
+  <a id="toreactjs" href="works1.html"><i class="fa-solid fa-briefcase"></i> OTHER WORK</a>
 
 </div>
 
