worked on theming

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div id="container">
     <img id="headshot" src="Headshot Circle.png">
     
-    <h1 id="title">ramariano | WEB DEVELOPER</h1>
+    <h1 id="title"><span style= "font-family: Gill Sans">ramariano</span> | <span style="color: rgb(134, 134, 134)">WEB DEVELOPER</span></h1>
     <nav id="navmenu">
       <ul>
         <li><a id="aboutme">ABOUT</a></li>
