worked on mobility regarding works 1

--- a/index.html
+++ b/index.html
@@ -15,12 +15,20 @@
   <div id="container">
     <img id="headshot" src="Headshot Circle.png">
     
-    <h1 id="title"><span style= "font-family: Gill Sans">ramariano</span> | <span style="color: rgb(134, 134, 134)">WEB DEVELOPER</span></h1>
+    <h1 id="title"><span style= "font-family: Gill Sans">ramariano</span> | <span style="color: rgb(134, 134, 134, .7)">WEB DEVELOPER</span></h1>
+    <div id="divider"></div> 
     <nav id="navmenu">
       <ul>
-        <li><a id="aboutme">ABOUT</a></li>
-        <li><a id="works">WORKS</a></li>
-        <li><a id="contact">CONTACT</a></li>
+        <li>
+          <div id="aboutline"></div>
+          <a id="aboutme">ABOUT</a>
+        </li>
+        <li>
+          <div id="worksline"></div>
+          <a id="works">WORKS</a></li>
+        <li>
+          <div id="contactline"></div>
+          <a id="contact">CONTACT</a></li>
       </ul>
       
     </nav>
