--- a/works1.html
+++ b/works1.html
@@ -24,11 +24,17 @@
     <a href="https://ra-mariano.github.io/FCC--D3-Bar-Chart/">
       <img id="barchartimg" src="D3 GDP Bar Chart Image .png">
     </a>
+    <a href="https://ra-mariano.github.io/FCC-D3-Scatterplot-Graph/">
+      <img id="scatterplotimg" src="D3 Scatterplot Graph Image.png">
+    </a>
     
   </div>
+
+  <div id="works1footer">
   <a id="homereactjs" href="index.html"><i class="fa-solid fa-house-chimney"></i> HOME</a>
   <a id="towpelem" href="works2.html"><i class="fa-solid fa-briefcase"></i> OTHER WORK</a>
 
+</div>
   <i id="leftarrow" class="fa-solid fa-circle-chevron-left fa-4x"></i>
   <i id="rightarrow" class="fa-solid fa-circle-chevron-right fa-4x"></i>
 
